k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapi-deployment
  labels:
    app: sampleapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sampleapi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: sampleapi
    spec:
      containers:
        - name: sampleapi
          image: acrdevopsdemo123.azurecr.io/sampleapi:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
