k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapi-service
spec:
  type: LoadBalancer
  selector:
    app: sampleapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
